--- a/ind_cal_multi_camera/yaml/head_cam_cameras.yaml
+++ b/ind_cal_multi_camera/yaml/head_cam_cameras.yaml
@@ -15,14 +15,14 @@ static_cameras:
     transform_interface: ros_camera_housing_cti
     camera_housing_frame: head_cam_link
     camera_mounting_frame: ati_link
-    focal_length_x: 1920.83997
-    focal_length_y: 1947.61755
-    center_x: 574.48794
-    center_y: 415.71186
-    distortion_k1: -0.006790000000000001
-    distortion_k2: -0.01598
-    distortion_p1: -0.0114
-    distortion_p2: -0.01391
+    focal_length_x: 1913.51831
+    focal_length_y: 1933.75818
+    center_x: 698.35984
+    center_y: 509.58327
+    distortion_k1: -0.27077
+    distortion_k2: 0.18021
+    distortion_p1: -0.0012200000000000002
+    distortion_p2: 0.0012100000000000001
     distortion_k3: 0.0
     image_width: 1360
     image_height: 1024
