--- a/ind_cal_multi_camera/yaml/head_cam_caljob.yaml
+++ b/ind_cal_multi_camera/yaml/head_cam_caljob.yaml
@@ -7,7 +7,7 @@ scenes:
      observations:
      -
           camera: head_cam
-          target: circles_target
+          target: checker_target
           roi_x_min: 0
           roi_x_max: 1360
           roi_y_min: 0
