--- a/ind_cal_multi_camera/yaml/head_cam_targets.yaml
+++ b/ind_cal_multi_camera/yaml/head_cam_targets.yaml
@@ -2,9 +2,8 @@
 
 static_targets:
 -
-    target_name: circles_target
-    target_type: 1
-    circle_dia: 0.036
+    target_name: checker_target
+    target_type: 0
     target_frame: target_frame
     transform_interface: ros_lti
     angle_axis_ax: 0.0
@@ -14,62 +13,54 @@ static_targets:
     position_y: 0.0
     position_z: 0.0
     target_rows: 8
-    target_cols: 7
+    target_cols: 6
     num_points: 56
     points:
-    - pnt: [0.0, 0.189, 0.0]
-    - pnt: [0.027, 0.189, 0.0]
-    - pnt: [0.054, 0.189, 0.0]
-    - pnt: [0.081, 0.189, 0.0]
-    - pnt: [0.108, 0.189, 0.0]
-    - pnt: [0.135, 0.189, 0.0]
-    - pnt: [0.162, 0.189, 0.0]
-    - pnt: [0.0, 0.162, 0.0]
-    - pnt: [0.027, 0.162, 0.0]
-    - pnt: [0.054, 0.162, 0.0]
-    - pnt: [0.081, 0.162, 0.0]
-    - pnt: [0.108, 0.162, 0.0]
-    - pnt: [0.135, 0.162, 0.0]
-    - pnt: [0.162, 0.162, 0.0]
-    - pnt: [0.0, 0.135, 0.0]
-    - pnt: [0.027, 0.135, 0.0]
-    - pnt: [0.054, 0.135, 0.0]
-    - pnt: [0.081, 0.135, 0.0]
-    - pnt: [0.108, 0.135, 0.0]
-    - pnt: [0.135, 0.135, 0.0]
-    - pnt: [0.162, 0.135, 0.0]
-    - pnt: [0.0, 0.108, 0.0]
-    - pnt: [0.027, 0.108, 0.0]
-    - pnt: [0.054, 0.108, 0.0]
-    - pnt: [0.081, 0.108, 0.0]
-    - pnt: [0.108, 0.108, 0.0]
-    - pnt: [0.135, 0.108, 0.0]
-    - pnt: [0.162, 0.108, 0.0]
-    - pnt: [0.0, 0.081, 0.0]
-    - pnt: [0.027, 0.081, 0.0]
-    - pnt: [0.054, 0.081, 0.0]
-    - pnt: [0.081, 0.081, 0.0]
-    - pnt: [0.108, 0.081, 0.0]
-    - pnt: [0.135, 0.081, 0.0]
-    - pnt: [0.162, 0.081, 0.0]
-    - pnt: [0.0, 0.054, 0.0]
-    - pnt: [0.027, 0.054, 0.0]
-    - pnt: [0.054, 0.054, 0.0]
-    - pnt: [0.081, 0.054, 0.0]
-    - pnt: [0.108, 0.054, 0.0]
-    - pnt: [0.135, 0.054, 0.0]
-    - pnt: [0.162, 0.054, 0.0]
-    - pnt: [0.0, 0.027, 0.0]
-    - pnt: [0.027, 0.027, 0.0]
-    - pnt: [0.054, 0.027, 0.0]
-    - pnt: [0.081, 0.027, 0.0]
-    - pnt: [0.108, 0.027, 0.0]
-    - pnt: [0.135, 0.027, 0.0]
-    - pnt: [0.162, 0.027, 0.0]
+    - pnt: [0.0, 0.175, 0.0]
+    - pnt: [0.025, 0.175, 0.0]
+    - pnt: [0.05, 0.175, 0.0]
+    - pnt: [0.075, 0.175, 0.0]
+    - pnt: [0.1, 0.175, 0.0]
+    - pnt: [0.125, 0.175, 0.0]
+    - pnt: [0.0, 0.15, 0.0]
+    - pnt: [0.025, 0.15, 0.0]
+    - pnt: [0.05, 0.15, 0.0]
+    - pnt: [0.075, 0.15, 0.0]
+    - pnt: [0.1, 0.15, 0.0]
+    - pnt: [0.125, 0.15, 0.0]
+    - pnt: [0.0, 0.125, 0.0]
+    - pnt: [0.025, 0.125, 0.0]
+    - pnt: [0.05, 0.125, 0.0]
+    - pnt: [0.075, 0.125, 0.0]
+    - pnt: [0.1, 0.125, 0.0]
+    - pnt: [0.125, 0.125, 0.0]
+    - pnt: [0.0, 0.1, 0.0]
+    - pnt: [0.025, 0.1, 0.0]
+    - pnt: [0.05, 0.1, 0.0]
+    - pnt: [0.075, 0.1, 0.0]
+    - pnt: [0.1, 0.1, 0.0]
+    - pnt: [0.125, 0.1, 0.0]
+    - pnt: [0.0, 0.075, 0.0]
+    - pnt: [0.025, 0.075, 0.0]
+    - pnt: [0.05, 0.075, 0.0]
+    - pnt: [0.075, 0.075, 0.0]
+    - pnt: [0.1, 0.075, 0.0]
+    - pnt: [0.125, 0.075, 0.0]
+    - pnt: [0.0, 0.05, 0.0]
+    - pnt: [0.025, 0.05, 0.0]
+    - pnt: [0.05, 0.05, 0.0]
+    - pnt: [0.075, 0.05, 0.0]
+    - pnt: [0.1, 0.05, 0.0]
+    - pnt: [0.125, 0.05, 0.0]
+    - pnt: [0.0, 0.025, 0.0]
+    - pnt: [0.025, 0.025, 0.0]
+    - pnt: [0.05, 0.025, 0.0]
+    - pnt: [0.075, 0.025, 0.0]
+    - pnt: [0.1, 0.025, 0.0]
+    - pnt: [0.125, 0.025, 0.0]
     - pnt: [0.0, 0.0, 0.0]
-    - pnt: [0.027, 0.0, 0.0]
-    - pnt: [0.054, 0.0, 0.0]
-    - pnt: [0.081, 0.0, 0.0]
-    - pnt: [0.108, 0.0, 0.0]
-    - pnt: [0.135, 0.0, 0.0]
-    - pnt: [0.162, 0.0, 0.0]
+    - pnt: [0.025, 0.0, 0.0]
+    - pnt: [0.05, 0.0, 0.0]
+    - pnt: [0.075, 0.0, 0.0]
+    - pnt: [0.1, 0.0, 0.0]
+    - pnt: [0.125, 0.0, 0.0]
