--- a/ind_cal_multi_camera/yaml/head_cam_cameras.yaml
+++ b/ind_cal_multi_camera/yaml/head_cam_cameras.yaml
@@ -1,28 +1,38 @@
 ---
 
-static_cameras:
+moving_cameras:
  -
     camera_name: head_cam
     camera_optical_frame: /head_cam_link_optical
-    trigger: NO_WAIT_TRIGGER
+    trigger: ROS_CAMERA_OBSERVER_TRIGGER
+    trigger_parameters:
+    -
+         service_name: ObserverTrigger
+         instructions: message for user
+         image_topic: /head_cam/image_rect_color
+         roi_min_x: 0
+         roi_max_x: 1360
+         roi_min_y: 0
+         roi_max_y: 1024
     image_topic: /head_cam/image_rect_color
-    angle_axis_ax: 0.0
-    angle_axis_ay: 0.0
-    angle_axis_az: 0.0
-    position_x: 0.0
-    position_y: 0.0
-    position_z: 0.0
-    transform_interface: ros_camera_housing_cti
+    # angle_axis_ax: 0.0
+    # angle_axis_ay: 0.0
+    # angle_axis_az: 0.0
+    # position_x: 0.0
+    # position_y: 0.0
+    # position_z: 0.0
+    # xyz_quat_pose: [ 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0 ]
+    transform_interface: ros_camera_housing_lti
     camera_housing_frame: head_cam_link
     camera_mounting_frame: ati_link
-    focal_length_x: 1913.51831
-    focal_length_y: 1933.75818
-    center_x: 698.35984
-    center_y: 509.58327
-    distortion_k1: -0.27077
-    distortion_k2: 0.18021
-    distortion_p1: -0.0012200000000000002
-    distortion_p2: 0.0012100000000000001
+    focal_length_x: 1953.358398
+    focal_length_y: 1976.233765
+    center_x: 701.339198
+    center_y: 466.170310
+    distortion_k1: -0.252346
+    distortion_k2: 0.077100
+    distortion_p1: 0.001319
+    distortion_p2: 0.002208
     distortion_k3: 0.0
     image_width: 1360
     image_height: 1024
