--- a/ind_cal_multi_camera/yaml/head_cam_cameras.yaml
+++ b/ind_cal_multi_camera/yaml/head_cam_cameras.yaml
@@ -15,14 +15,25 @@ static_cameras:
     transform_interface: ros_camera_housing_cti
     camera_housing_frame: head_cam_link
     camera_mounting_frame: ati_link
-    focal_length_x: 1913.51831
-    focal_length_y: 1933.75818
-    center_x: 698.35984
-    center_y: 509.58327
-    distortion_k1: -0.27077
-    distortion_k2: 0.18021
-    distortion_p1: -0.0012200000000000002
-    distortion_p2: 0.0012100000000000001
+    ## P
+    focal_length_x: 1953.358398
+    focal_length_y: 1976.233765
+    center_x: 701.339198
+    center_y: 466.170310
+    distortion_k1: -0.252346
+    distortion_k2: 0.077100
+    distortion_p1: 0.001319
+    distortion_p2: 0.002208
     distortion_k3: 0.0
+    ## K
+    # focal_length_x: 2014.625407
+    # focal_length_y: 2011.995627
+    # center_x: 698.967333
+    # center_y: 467.580934
+    # distortion_k1: 0.0
+    # distortion_k2: 0.0
+    # distortion_p1: 0.0
+    # distortion_p2: 0.0
+    # distortion_k3: 0.0
     image_width: 1360
     image_height: 1024
